Final draft of ArcticNet 2020 talk

--- a/talk/ArcticKelp.bib
+++ b/talk/ArcticKelp.bib
@@ -66,3 +66,48 @@
   note = {R package version 3.4.6},
   url = {https://CRAN.R-project.org/package=biomod2},
 }
+@article{Borum2002,
+  title={Biomass, photosynthesis and growth of Laminariasaccharina in a high-arctic fjord, NE Greenland},
+  author={Borum, Jens and Pedersen, M and Krause-Jensen, D and Christensen, P and Nielsen, K},
+  journal={Marine Biology},
+  volume={141},
+  number={1},
+  pages={11--19},
+  year={2002},
+  publisher={Springer}
+}
+@article{Hop2016,
+  title={Distribution of macroalgae in Kongsfjorden, Svalbard},
+  author={Hop, Haakon and Kovaltchouk, Nikolaj A and Wiencke, Christian},
+  journal={Polar Biology},
+  volume={39},
+  number={11},
+  pages={2037--2051},
+  year={2016},
+  publisher={Springer}
+}
+@inproceedings{Schoenrock2018,
+  title={DISTRIBUTION OF BENTHIC COMMUNITITES IN A FJORD-MARINE SYSTEM IN SOUTHWESTERN GREENLAND, WITH A FOCUS ON ALGAL DOMINATED HABITATS},
+  author={Schoenrock, KM and Stachnik, {\L} and Vad, J and Kamenos, NA and Pearce, D and Rea, B and Schofield, JE and Lea, J and Mair, D},
+  booktitle={АРКТИЧЕСКИЕ ИССЛЕДОВАНИЯ: ОТ ЭКСТЕНСИВНОГО ОСВОЕНИЯ К КОМПЛЕКСНОМУ РАЗВИТИЮ},
+  pages={220--223},
+  year={2018}
+}
+@article{Filbee2019,
+  title={Arctic kelp forests: diversity, resilience and future},
+  author={Filbee-Dexter, Karen and Wernberg, Thomas and Fredriksen, Stein and Norderhaug, Kjell Magnus and Pedersen, Morten Foldager},
+  journal={Global and Planetary Change},
+  volume={172},
+  pages={1--14},
+  year={2019},
+  publisher={Elsevier}
+}
+@article{Ronowicz2020,
+  title={Glacial and depth influence on sublittoral macroalgal standing stock in a high-Arctic fjord},
+  author={Ronowicz, Marta and W{\l}odarska-Kowalczuk, Maria and Kukli{\'n}ski, Piotr},
+  journal={Continental Shelf Research},
+  volume={194},
+  pages={104045},
+  year={2020},
+  publisher={Elsevier}
+}
